# quote-aqi

./: .gitignore  README.md  pyproject.toml  test.py
src/quote_aqi/: __init__.py  __main__.py  caiyunapp.py  config.py  main.py  mindreset.py  models.py  plot.py  standards.py  utils.py
src/quote_aqi/fonts/: LICENSE  __init__.py
tests/: test_mindreset.py
